# api-workbench

./: .gitignore  Makefile  README.md  go.mod  package-lock.json  package.json  vite.config.mjs
.github/workflows/: ci.yml  desktop-bundles.yml  release.yml
cmd/apiw/: main.go
cmd/apiw-sidecar/: main.go
desktop/: index.html
desktop/src/: i18n.js  main.js  styles.css  themes.js
docs/: cli.md  desktop.md  growth.md  mvp.md  onboarding.md  open-core.md  roadmap.md  tui.md  tutorial.md
examples/ci/: github-actions.yml
examples/httpbin/: README.md
examples/httpbin/requests/: headers.json  status-200.json
examples/public-apis/.apiw/: apiw.json
examples/public-apis/.apiw/env/: local.env
examples/public-apis/requests/: 04-random-dog.json  07-get-created-post.json  08-status-codes.json
internal/app/: app.go  import.go  init.go  run.go  run_test.go  tui.go  tui_test.go
internal/app/templates/: health.json  project.json
internal/curlimport/: curlimport.go  curlimport_test.go
internal/diff/: diff.go  diff_test.go
internal/discover/: discover.go
internal/envfile/: envfile.go
internal/history/: history.go  history_test.go
internal/openapiimport/: openapiimport.go  openapiimport_test.go
internal/project/: project.go
internal/request/: request.go
internal/runner/: builtin_test.go  http.go  runner.go  runner_test.go
internal/workspace/: workspace.go  workspace_test.go
scripts/: prepare-sidecar.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+6 files in other folders)
