[package]
name = "api-workbench-desktop"
version = "0.1.0"
description = "Desktop GUI for API Workbench"
authors = ["Maki"]
edition = "2021"

[lib]
name = "api_workbench_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
